# licensa

./: .gitattributes  .gitignore  .licensaignore  .licensarc  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  SECURITY.md  codecov.yml  licenses.json  release.toml  rustfmt.toml
.cargo/: config
.github/workflows/: build.yml  changelog.yml  release.yml  rust.yml
copyright-notices/: mpl-2.0.txt
licenses/: README.md  licenses.manifest.json  metadata.json
licenses/headers/: agpl-3.0.txt  apache-2.0.txt  ecl-2.0.txt  gfdl-1.3.txt  gpl-2.0.txt  gpl-3.0.txt  lgpl-2.1.txt  mulanpsl-2.0.txt
scripts/: install.ps1  install.sh
src/: _spdx.rs  cache.rs  cli.rs  config.rs  copyright_notice.rs  env.rs  error.rs  header.rs  interpolation.rs  lib.rs  license.rs  logger.rs  main.rs  parser.rs  scanner.rs  schema.rs  spdx.rs  store.rs  template.rs  utils.rs  validator.rs  validator_test.rs  walker.rs  workspace.rs
src/_experimental/: _spdx.rs  _template.rs  mod.rs  store.rs
src/_experimental/spdx/: error.rs
src/cli/: add.rs  apply.rs  commands.rs  init.rs  list.rs  mod.rs  verify.rs
src/commands/: add.rs  apply.rs  init.rs  list.rs  mod.rs  verify.rs
src/config/: args.rs  builder.rs  mod.rs
src/helpers/: channel_duration.rs  mod.rs
src/ops/: mod.rs  scan.rs  stats.rs  walk.rs  work_tree.rs  workspace.rs
src/scanner/: _examples.rs  header_checker.rs  mod.rs  scan.rs  source.rs  stats.rs
src/source/: header.rs  mod.rs
src/spdx/: error.rs  license.rs  mod.rs  template.rs
src/template/: cache.rs  copyright.rs  header.rs  interpolation.rs  mod.rs
src/test_utils/: mod.rs
src/utils/: mod.rs  testing.rs  validate.rs
src/workspace/: _examples.rs  error.rs  mod.rs  ops.rs  scan.rs  stats.rs  walker.rs  work_tree.rs
src/workspace/walker/: builder.rs  mod.rs  walk.rs
tools/: .gitignore  requirements.txt
tools/extractor/: generate_manifest.py  license_header.py  logger.py  requirements.txt  run_tests.py  template.py  utils.py
tools/extractor/tests/: test_license_header.py  test_utils.py
