[package]
name = "licensa"
version = "0.1.8"
edition = "2021"
description = "CLI tool for seamless source code license management, supporting 65+ file types"
authors = ["Nelson Dominguez <ekkolon@proton.me>"]
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "spdx", "license-headers", "license-management"]
repository = "https://github.com/ekkolon/licensa"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.75.0"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "./README.md",
    ".licensaignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "licensa"
path = "src/bin/licensa.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
lazy_static = "1"
anyhow = "1.0.81"
ignore = "0.4.22"
crossbeam-channel = "0.5.12"
rayon = "1.10.0"
colored = "2.1.0"
inquire = "0.7.4"
spdx = "0.10.4"
handlebars = "5.1.2"
thiserror = "1.0.58"

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }

[badges]
maintenance = { status = "experimental" }
codecov = { repository = "ekkolon/licensa", branch = "main", service = "github" }

[profile.dev]
# Disabling debug info speeds up builds a bunch and we don't rely on it for debugging that much.
debug = 0

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
tempfile = "3.10.1"
